# school21

./: .gitignore  .vimrc  init.vim  main.c  zshrc
_libft/: Makefile  ft_bzero.c  ft_isalpha.c  ft_isdigit.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_strchr.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strrchr.c  ft_tolower.c  libft.h  main.c
black_hole/: ft_putchar.c
bonus/: Makefile  a.out  def_spec.c  ft_printf.h  header.h  main.c  print_arg.c  printf.c
bonus/girls_printf/: Makefile  ft_printf.h  printf.c  printf_check_input.c  printf_get_size.c  printf_print_format_mod.c  printf_print_modifier.c
bonus/includes/: check_flags.c  ft_print_char.c  ft_print_hex.c  ft_print_nbr.c  ft_print_str.c  get_width.c
bonus/libft/: Makefile  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_front.c  ft_lstclear.c  ft_memchr.c  ft_putchar_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strchr.c  ft_striteri.c  ft_strlcpy.c  ft_substr.c  ft_toupper.c  libft.a.Lk6S4b  libft.h
bonus/with_libft/: Makefile  ft_printf.c
bonus_ft_printf/: Makefile  header.h  printf.c
c8/src/: CMakeLists.txt  Makefile  MyQOpenGLWidget.cpp  settings.my  viewer3d.ui
c8/src/QtGifImage-master/src/gifimage/: qdoc_wrapper.sh  qgifimage.cpp
c8/src/parser/: core.c
c8/src/struct/: other.h
c8/src/struct/object3/: free.c  object3.h  update.c
c8/src/struct/object3/transformations/: move.c  rotate.c
c8/src/struct/vector3/: add.c  rotate.c
c8/src/tests/: Makefile  main.c  main.h  move.c  parser.c  rotate.c  scale.c
chearing/: ft_printf.c  ft_printf_hex.c  ft_putnbrs.c
circle_00/_libft/: Makefile  (+8 more)
ft_printf/: Makefile  ft_printf.c  ft_printf.h  ft_printf_hex.c  ft_putnbrs.c  ft_putstr.c  main.c  width_precision.c
get_next_line/: README.md  a.out  file.txt  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c  test.c  text.txt
girls_print/: ft_printf.h  main.c  printf_utils.c
gnl/: get_next_line_utils.c
liba/: Makefile  ft_calloc.c  ft_isalpha.c  ft_memcmp.c  ft_putnbr_fd.c  ft_split.c  ft_striteri.c  libft.h
libft/: Makefile  ft_atoi.c  ft_isdigit.c  ft_itoa.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strmapi.c  ft_strncmp.c  ft_strtrim.c  ft_substr.c  libft.h
libft2/: Makefile  ft_isalpha.c  libft.h
libft_resample/: ft_strrchr.c  ft_toupper.c
libft_retry/: ft_isalpha.c  libft.h
mini_clone/: Makefile
my_functions/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_strlen.c
so_long/: Makefile  so_long.c  so_long.h
utils/: .gitignore  .vimrc  Hotkey Window.json  com.googlecode.iterm2.plist  profiles.json
with_l/: Makefile  ft_printf.c  ft_printf.h  main_loop.c
(+1108 files in other folders)
